--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "react_js",
+  "name": "react_bootstrap",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "axios": "^0.16.2",
-    "express": "^4.15.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1",
-    "react-scripts": "1.0.10"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
